first section html and css positioning = done

--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
 </head>
 <body>
     <div class="main">
-        <img src='images/logo_Becode (1).png' class="becode-img">
+        <img src='images/logo_Becode (1).png' class="becode-logo" width="300px">
         <h1>Welcome to BeCode - the new training in daytime education <br> to master digital technologies. <br> Totally free</h1>
         <div class="goals">
             <nav>
                 <i class="fas fa-chalkboard-teacher" style="font-size: 60px"></i>
                 <h3>Learn to learn</h3>
-                <p></p>
+                <p>Here in BeCode, we do not <br> learn one specific language <br> we learn to <br> learn. </p>
             </nav>
             <nav>
                 <i class="fab fa-creative-commons-sampling" style="font-size: 60px"></i>
-                <p></p>
+                <h3>Active Education</h3>
+                <p>No annoying long-winded <br> presentations that you do not remember. <br> We use an active <br> pedagogy.</p>
             </nav>
             <nav>
                 <i class="fas fa-heartbeat" style="font-size: 60px"></i>
-                <p></p>
+                <h3>Open for everyone</h3>
+                <p>Your gender your religion, <br> your skin color, your age, your diploma ... <br> WE DO NOT <br> CARE. </p>
             </nav>
             <nav>
                 <i class="fab fa-creative-commons-nc-eu" style="font-size: 60px"></i>
-                <p></p>
+                <h3>Free</h3>
+                <p>The training is completely free <br> if you do not have a pc, <br> we will give you <br> one. </p>
             </nav>
         </div>
     </div>
