--- a/index.html
+++ b/index.html
@@ -33,5 +33,20 @@
         </div>
     </div>
 
+    <h1 class="header2">We are waiting for you !</h1>
+    <div class="section-a">
+        <i class="fas fa-users" style="font-size: 275px"></i>
+        <nav>
+            <h3>So, are you still hesitating about it ? <br> Give our online test a try.</h3>
+            <ul>
+                <li>No matter your diplomas.</li>
+                <li>No matter your financial situation is.</li>
+                <li>No matter your background.</li>
+                <li>You are more than Welcome !</li>
+            </ul>
+            <p>Your selection depends on your motivation and your <br> interest in Web Development.</p>
+        </nav>
+    </div>
+
 
 </body>
