--- a/index.html
+++ b/index.html
@@ -47,6 +47,23 @@
             <p>Your selection depends on your motivation and your <br> interest in Web Development.</p>
         </nav>
     </div>
+    <h2>What you will be learning</h2>
+    <div class="section-b">
+        <div class="gains">
+            <div class="skills">
+                <h3>Soft Skills</h3>
+                <p>Employers are looking for plant growers today who are capable of <br> solving problems in an intelligent and creative way. That is why we <br> at BeCode mainly learn to learn, work in a team, manage a project <br> well from A to Z.</p>
+            </div>
+            <div class="tech">
+                <h3>Tech Skills</h3>
+                <p>At BeCode you will discover all aspects of building a website or <br> mobile application. The course deals with both "Front-End" and <br> "Back-End" development. The Front-End, that is where the elements are <br> built that you see on the screen and with which you can interact. <br> The Back-End is the internal structure of the website or app.</p>
+            </div>
+        </div>
+        <div class="pc-icon">
+            <i class="fas fa-laptop-code" style="font-size: 256px"></i>
+        </div>
+        
+    </div>
 
 
 </body>
