--- a/index.html
+++ b/index.html
@@ -67,11 +67,21 @@
     <h2>Where and when ?</h2>
     <div class="section-c">
         <div class="cities">
-            <h3 class="sub1">Brussels</h3>
-            <h3 class="sub2">Genk</h3>
-            <h3 class="sub3">Liege</h3>
-            <h3 class="sub4">Antwerp</h3>
-            <h3 class="sub5">Charleroi</h3>
+            <div>
+                <h3>Brussels</h3>
+            </div>
+            <div>
+                <h3>Genk</h3>
+            </div>
+            <div>
+                <h3>Liege</h3>
+            </div>
+            <div>
+                <h3>Antwerp</h3>
+            </div>
+            <div>
+                <h3>Charleroi</h3>
+            </div>
         </div>
         <div class="cities-info">
             <div class="brussels">
