--- a/index.html
+++ b/index.html
@@ -126,16 +126,34 @@
                 <p><strong>Start date: </strong>January 2019</p>
                 <p><strong>End of the training: </strong>Summer 2019</p>  <p><strong>Internship: </strong>Summer 2019</p>           <p><strong>Available places: </strong>25</p>  
             </div>
-    
-
-
-
         </div>
-
-
+    </div>
+    <div class="section-d">
+    <h2>Still there ?</h2>
+    <p>To become a good coder, you have to be curious and know how to use the information found on the Internet.<br> We want to give you a taste of that right now! No stress, it's much simpler than it seems.<br> We just want to make sure you're ready to invest in this training.</p>
+    <div class="conditions">
+        <nav>
+            <i class="far fa-file-alt" style="font-size:100px"></i>
+            <h1>1 Fill out this form</h1>
+            <p>A slightly offbeat form that will<br> allow us to know more about you and what motivates you to become a web developer. No trap, just fun questions.</p>
+        </nav>
+        <nav>
+            <i class="far fa-thumbs-up"style="font-size:100px"></i>
+            <h1>2 Go to practice</h1>
+            <p>Register on Khan Academy and take the plunge to practice! See our Khan Academy user guide to understand how to proceed. You will need the following code: 6KQEEEUJ</p>
+        </nav>
+        <nav>
+            <i class="far fa-comments"style="font-size:100px"></i>
+            <h1>3 Come to meet us</h1>
+            <p>What matters to us is the human. Once your badges in your pocket, we will invite you to meet us during our selection days. You will see, it will be fun and not too stressful, we promise you.</p>
+        </nav>
 
     </div>
 
+    </div>
+    <div class="try">
+        <a href="https://www.becode.org/register/form_fr.html" class="button"><button>I Register!</button></a>
+    </div>
     
 
 
