edit html and css

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <nav>
             <i class="far fa-thumbs-up"style="font-size:100px"></i>
             <h1>2 Go to practice</h1>
-            <p>Register on Khan Academy and take the plunge to practice! See our Khan Academy user guide to understand how to proceed. You will need the following code: 6KQEEEUJ</p>
+            <p>Register on Khan Academy and take the plunge to practice! See our Khan Academy user guide to understand how to proceed. You will need the following code: <strong>6KQEEEUJ</strong></p>
         </nav>
         <nav>
             <i class="far fa-comments"style="font-size:100px"></i>
@@ -152,7 +152,7 @@
 
     </div>
     <div class="try">
-        <a href="https://www.becode.org/register/form_fr.html" class="button"><button>I Register!</button></a>
+        <a href="https://www.becode.org/register/form_fr.html" class="button" target=_blank>I Register!</a>
     </div>
     
 
