edit html and css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 <body>
     <div class="main">
-        <img src='images/logo_Becode (1).png' class="becode-logo" width="300px">
+        <img src='images/logo_Becode (1).png' class="becode-logo" width="200px">
+        <header>
+            <nav class="nav-bar">
+                <p><a href="#section-a">For whom?!</a></p>
+                <p><a href="#section-b">You will be learning</a></p>
+                <p><a href="#section-c">Where?</a></p>
+                <p><a href="#section-d">Register now!</a></p>
+                <p><a href="#contact-form">Contact us</a></p>
+            </nav>
+        </header>
         <h1>Welcome to BeCode - the new training in daytime education <br> to master digital technologies. <br> Totally free</h1>
         <div class="goals">
             <nav>
@@ -18,12 +27,12 @@
             <nav>
                 <i class="fab fa-creative-commons-sampling" style="font-size: 60px"></i>
                 <h3>Active Education</h3>
-                <p>No annoying long-winded <br> presentations that you do not remember. <br> We use an active <br> pedagogy.</p>
+                <p>No annoying long-winded <br> presentations that you do not  <br> remember. We use an active <br> pedagogy.</p>
             </nav>
             <nav>
                 <i class="fas fa-heartbeat" style="font-size: 60px"></i>
                 <h3>Open for everyone</h3>
-                <p>Your gender your religion, <br> your skin color, your age, your diploma ... <br> WE DO NOT <br> CARE. </p>
+                <p>Your gender your religion, <br> your skin color, your age, <br>  your diploma ...  <br> <strong>WE DO NOT CARE.</strong></p>
             </nav>
             <nav>
                 <i class="fab fa-creative-commons-nc-eu" style="font-size: 60px"></i>
@@ -33,8 +42,8 @@
         </div>
     </div>
 
-    <h1 class="header2">We are waiting for you !</h1>
-    <div class="section-a">
+    <h1 class="header2"><p>We are waiting for you !</p></h1>
+    <div id="section-a">
         <i class="fas fa-users" style="font-size: 275px"></i>
         <nav>
             <h3>So, are you still hesitating about it ? <br> Give our online test a try.</h3>
@@ -48,7 +57,7 @@
         </nav>
     </div>
     <h2>What you will be learning</h2>
-    <div class="section-b">
+    <div id="section-b">
         <div class="gains">
             <div class="skills">
                 <h3>Soft Skills</h3>
@@ -64,8 +73,8 @@
         </div>   
     </div>
     
-    <h2>Where and when ?</h2>
-    <div class="section-c">
+    <h2 class="where"><p>Where and when ?</p></h2>
+    <div id="section-c">
         <div class="cities">
             <div>
                 <h3>Brussels</h3>
@@ -86,7 +95,7 @@
         <div class="cities-info">
             <div class="brussels">
             <h3><i class="fas fa-map-marker-alt"></i> Brussels </h3>
-            <p><strong>Address: </strong> <a href="https://www.google.com/maps/dir//Cantersteen+10,+1000+Bruxelles/@50.8453553,4.3550966,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47c3c47fce0ba71d:0x2f634768a374d3b0!2m2!1d4.3572853!2d50.8453553">Cantersteen 10, 1000 Brussels</a></p>
+            <p><strong>Address: </strong> <a href="https://www.google.com/maps/dir//Cantersteen+10,+1000+Bruxelles/@50.8453553,4.3550966,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x47c3c47fce0ba71d:0x2f634768a374d3b0!2m2!1d4.3572853!2d50.8453553" target=_blank>Cantersteen 10, 1000 Brussels</a></p>
             <p><strong>Registration deadline: </strong>December 2018</p>
             <p><strong>Start date: </strong>January 2019</p>
             <p><strong>End of the training: </strong>Summer 2019</p>
@@ -95,7 +104,7 @@
             </div>
             <div class="genk">
                 <h3><i class="fas fa-map-marker-alt"></i> Genk </h3>
-                <p><strong>Address: </strong> <a href="https://www.google.com/maps/place/T2-campus/@50.9968738,5.5331603,17z/data=!3m1!4b1!4m5!3m4!1s0x47c0d9703356db27:0xfdbbe2b3f43b950d!8m2!3d50.9968738!4d5.5353543?shorturl=1">T2 Campus, THOR Park 8300, 3600 Genk</a></p>
+                <p><strong>Address: </strong> <a href="https://www.google.com/maps/place/T2-campus/@50.9968738,5.5331603,17z/data=!3m1!4b1!4m5!3m4!1s0x47c0d9703356db27:0xfdbbe2b3f43b950d!8m2!3d50.9968738!4d5.5353543?shorturl=1" target=_blank>T2 Campus, THOR Park 8300, 3600 Genk</a></p>
                 <p><strong>Registration deadline: </strong>27 September 2018</p>
                 <p><strong>Start date: </strong>October 2018</p>
                 <p><strong>End of the training: </strong>April 2019</p>
@@ -104,7 +113,7 @@
             </div>
             <div class="liege">
                 <h3><i class="fas fa-map-marker-alt"></i> Liege </h3>
-                <p><strong>Address: </strong> <a href="#">To be confirmed</a></p>
+                <p><strong>Address: </strong> <a href="#" target=_blank>To be confirmed</a></p>
                 <p><strong>Registration deadline: </strong>4 October 2018</p>
                 <p><strong>The selection phase: </strong>8 & 9 October</p>
                 <p><strong>Start date: </strong>Fall 2018</p>
@@ -113,7 +122,7 @@
             </div>
             <div class="antwerp">
                 <h3><i class="fas fa-map-marker-alt"></i> Antwerp </h3>
-                <p><strong>Address: </strong> <a href="#">To be confirmed</a></p>
+                <p><strong>Address: </strong> <a href="#" target=_blank>To be confirmed</a></p>
                 <p><strong>Registration deadline: </strong>Winter 2018</p>
                 <p><strong>Start date: </strong>Winter 2018</p>
                 <p><strong>End of the training: </strong>Summer 2019</p>
@@ -121,14 +130,14 @@
             </div>
             <div class="charleroi">
                 <h3><i class="fas fa-map-marker-alt"></i> Charleroi </h3>
-                <p><strong>Address: </strong> <a href="https://www.google.com/maps/place/Quai+Arthur+Rimbaud+10,+6000+Charleroi/@50.4061117,4.4389904,17z/data=!3m1!4b1!4m5!3m4!1s0x47c2267503f1dd91:0x86dcdd4c2a9c872b!8m2!3d50.4061117!4d4.4411844?shorturl=1">Quai Arthur Rimbaud 10, 6000 Charleroi</a></p>
+                <p><strong>Address: </strong> <a href="https://www.google.com/maps/place/Quai+Arthur+Rimbaud+10,+6000+Charleroi/@50.4061117,4.4389904,17z/data=!3m1!4b1!4m5!3m4!1s0x47c2267503f1dd91:0x86dcdd4c2a9c872b!8m2!3d50.4061117!4d4.4411844?shorturl=1" target=_blank>Quai Arthur Rimbaud 10, 6000 Charleroi</a></p>
                 <p><strong>Registration deadline: </strong>December 2018</p>
                 <p><strong>Start date: </strong>January 2019</p>
                 <p><strong>End of the training: </strong>Summer 2019</p>  <p><strong>Internship: </strong>Summer 2019</p>           <p><strong>Available places: </strong>25</p>  
             </div>
         </div>
     </div>
-    <div class="section-d">
+    <div id="section-d">
     <h2>Still there ?</h2>
     <p>To become a good coder, you have to be curious and know how to use the information found on the Internet.<br> We want to give you a taste of that right now! No stress, it's much simpler than it seems.<br> We just want to make sure you're ready to invest in this training.</p>
     <div class="conditions">
@@ -151,10 +160,34 @@
     </div>
 
     </div>
-    <div class="try">
-        <a href="https://www.becode.org/register/form_fr.html" class="button" target=_blank>I Register!</a>
+    <div class="register">
+        <a href="https://www.becode.org/register/form_fr.html" class="button" target=_blank>Register !</a>
     </div>
-    
+    <h2 class="contact-header"><p>Contact us</p></h2>
+    <div id="contact-form">
+        <form>
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" placeholder="Your name ...">
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" placeholder="Your last name ...">
+            <label for="email">Email address</label>
+            <input type="text" id="email" placeholder="Your E-mail ...">
+        </form>
+        <input type="radio" name="gender" value="male"> Male<br>
+        <input type="radio" name="gender" value="female"> Female<br>
+        <input type="radio" name="gender" value="other"> Other
+        <h3> Tell us who you are</h3>
+        <input type="radio" name="name">Employer <br>
+        <input type="radio" name="name">Sponsor <br>
+        <input type="radio" name="name">Job seeker
+        <p>Your messege goes here <i class="fas fa-arrow-down"></i><p>
+        <textarea id="subject" name="subject" placeholder="Write here ..." style="height:200px;width: 569px"></textarea>
+        <p>Before you leave, please tell us how did you know about <strong>becode </strong><i class="far fa-smile"></i></p>
+        <input type="checkbox"> Social media<br>
+        <input type="checkbox"> TV or Radio<br>
+        <input type="checkbox"> News paper<br>
+        <input type="checkbox"> The internet
 
+    </div>
 
 </body>
