edit css and html

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
     <div id="section-c">
         <div class="cities">
             <div>
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.233582934347!2d4.355096615281236!3d50.845358666712414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47fce0ba71d%3A0x2f634768a374d3b0!2sCantersteen+10%2C+1000+Bruxelles!5e0!3m2!1sen!2sbe!4v1537780726774" width="450" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
                 <h3>Brussels</h3>
             </div>
             <div>
@@ -185,9 +188,18 @@
         <p>Before you leave, please tell us how did you know about <strong>becode </strong><i class="far fa-smile"></i></p>
         <input type="checkbox"> Social media<br>
         <input type="checkbox"> TV or Radio<br>
-        <input type="checkbox"> News paper<br>
-        <input type="checkbox"> The internet
-
+        <input type="checkbox"> News paper
+        <div class="submit">
+            <button type="button">Submit</button>
+        </div>        
     </div>
+    <footer>
+        <a href="https://www.facebook.com/becode.org" target=_blank><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/becodeorg/" target=_blank><i class="fab fa-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCgE_Zvt-uWmsc0x6r82VAFQ"><i class="fab fa-youtube"></i></a>
+        <a href="https://medium.com/becode" target=_blank><i class="fab fa-medium"></i></a>
+        <a href="https://twitter.com/becodeorg" target=_blank><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/company/becode.org" target=_blank><i class="fab fa-linkedin"></i></a>
+    </footer>
 
 </body>
