--- a/index.html
+++ b/index.html
@@ -193,68 +193,71 @@
             <button type="button">Submit</button>
         </div>        
     </div>
-    <ul class="slides">
-        <input type="radio" name="radio-btn" id="img-1" checked />
-        <li class="slide-container">
-            <div class="slide">
-                <img src="images/4wings.png" style="height:150px; width:225px">
-            </div>
-            <div class="nav">
-                <label for="img-6" class="prev">&#x2039</label>
-                <label for="img-2" class="next">&#x203a</label>
-            </div>
-        </li>
-        <input type="radio" name="radio-btn" id="img-2"/>
-        <li class="slide-container">
-            <div  class="slide">
-                <img src="images/degroof.png" style="height:140px; width:225px">
-            </div>
-            <div class="nav">
-                <label for="img-1" class="prev">&#x2039</label>
-                <label for="img-3" class="next">&#x203a</label>
-            </div>
-        </li>
-        <input type="radio" name="radio-btn" id="img-3"/>
-        <li class="slide-container">
-            <div  class="slide">
-                <img src="images/digital-logo.png" style="height:140px; width:225px">
-            </div>
-            <div class="nav">
-                <label for="img-2" class="prev">&#x2039</label>
-                <label for="img-4" class="next">&#x203a</label>
-            </div>
-        </li>
-        <input type="radio" name="radio-btn" id="img-4"/>
-        <li class="slide-container">
-            <div  class="slide">
-                <img src="images/orange.png" style="height:160px; width:225px">
-            </div>
-            <div class="nav">
-                <label for="img-3" class="prev">&#x2039</label>
-                <label for="img-5" class="next">&#x203a</label>
-            </div>
-        </li>
-        <input type="radio" name="radio-btn" id="img-5"/>
-        <li class="slide-container">
-            <div  class="slide">
-                <img src="images/simplon.png" style="height:140px; width:225px">
-            </div>
-            <div class="nav">
-                <label for="img-4" class="prev">&#x2039</label>
-                <label for="img-6" class="next">&#x203a</label>
-            </div>
-        </li>
-        <input type="radio" name="radio-btn" id="img-6"/>
-        <li class="slide-container">
-            <div  class="slide">
-                <img src="images/telenet.png" style="height:150px; width:225px">
-            </div>
-            <div class="nav">
-                <label for="img-5" class="prev">&#x2039</label>
-                <label for="img-1" class="next">&#x203a</label>
-            </div>
-        </li>
-    </ul>
+
+    <h2 class="sponsor-title"><p>Our Partners</p></h2>
+    <div class="sponsors">
+        <ul class="slides">
+            <input type="radio" name="radio-btn" id="img-1" checked />
+            <li class="slide-container">
+                <div class="slide">
+                    <img src="images/4wings.png">
+                </div>
+                <div class="nav">
+                    <label for="img-6" class="prev">&#x2039</label>
+                    <label for="img-2" class="next">&#x203a</label>
+                </div>
+            </li>
+            <input type="radio" name="radio-btn" id="img-2"/>
+            <li class="slide-container">
+                <div  class="slide">
+                    <img src="images/degroof.png">
+                </div>
+                <div class="nav">
+                    <label for="img-1" class="prev">&#x2039</label>
+                    <label for="img-3" class="next">&#x203a</label>
+                </div>
+            </li>
+            <input type="radio" name="radio-btn" id="img-3"/>
+            <li class="slide-container">
+                <div  class="slide">
+                    <img src="images/digital-logo.png">
+                </div>
+                <div class="nav">
+                    <label for="img-2" class="prev">&#x2039</label>
+                    <label for="img-4" class="next">&#x203a</label>
+                </div>
+            </li>
+            <input type="radio" name="radio-btn" id="img-4"/>
+            <li class="slide-container">
+                <div  class="slide">
+                    <img src="images/Orange.svg">
+                </div>
+                <div class="nav">
+                    <label for="img-3" class="prev">&#x2039</label>
+                    <label for="img-5" class="next">&#x203a</label>
+                </div>
+            </li>
+            <input type="radio" name="radio-btn" id="img-5"/>
+            <li class="slide-container">
+                <div  class="slide">
+                    <img src="images/simplon.png">
+                </div>
+                <div class="nav">
+                    <label for="img-4" class="prev">&#x2039</label>
+                    <label for="img-6" class="next">&#x203a</label>
+                </div>
+            </li>
+            <input type="radio" name="radio-btn" id="img-6"/>
+            <li class="slide-container">
+                <div  class="slide">
+                    <img src="images/telenet.png">
+                </div>
+                <div class="nav">
+                    <label for="img-5" class="prev">&#x2039</label>
+                    <label for="img-1" class="next">&#x203a</label>
+                </div>
+            </li>
+        </ul>
     </div>
     <footer>
         <a href="https://www.facebook.com/becode.org" target=_blank><i class="fab fa-facebook-f"></i></a>
