--- a/index.html
+++ b/index.html
@@ -132,9 +132,13 @@
                 <h3>Genk</h3>
             </div>
             <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28637.003812255753!2d5.557981841839054!3d50.62382030674038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c0f74b8eacfcfb%3A0x40099ab2f4d6b40!2zTGnDqGdl!5e0!3m2!1sfr!2sbe!4v1537879459651"
+                    width="450" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                 <h3>Liege</h3>
             </div>
             <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190108.6788847719!2d4.239775257504878!3d51.24045689076077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3f68ebfc3887d%3A0x3eaf448482a88ab8!2sAnvers!5e0!3m2!1sfr!2sbe!4v1537879522229"
+                    width="450" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                 <h3>Antwerp</h3>
             </div>
             <div>
@@ -251,14 +255,16 @@
                 <i class="far fa-file-alt" style="font-size:100px"></i>
                 <h1>1 Fill out this form</h1>
                 <p>A slightly offbeat form that will
-                    <br> allow us to know more about you and what motivates you to become a web developer. No trap, just fun
+                    <br> allow us to know more about you and what motivates you to become a web developer. No trap,
+                    just fun
                     questions.
                 </p>
             </nav>
             <nav>
                 <i class="far fa-thumbs-up" style="font-size:100px"></i>
                 <h1>2 Go to practice</h1>
-                <p>Register on Khan Academy and take the plunge to practice! See our Khan Academy user guide to understand how
+                <p>Register on Khan Academy and take the plunge to practice! See our Khan Academy user guide to
+                    understand how
                     to proceed. You will need the following code:
                     <strong>6KQEEEUJ</strong>
                 </p>
@@ -266,7 +272,8 @@
             <nav>
                 <i class="far fa-comments" style="font-size:100px"></i>
                 <h1>3 Come to meet us</h1>
-                <p>What matters to us is the human. Once your badges in your pocket, we will invite you to meet us during our
+                <p>What matters to us is the human. Once your badges in your pocket, we will invite you to meet us
+                    during our
                     selection days. You will see, it will be fun and not too stressful, we promise you.</p>
             </nav>
 
